--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -8,7 +8,7 @@
 <header id="site-header" class="fixed-top">
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand"><i class="fas fa-graduation-cap"></i>Eazy School
+      <a th:href="@{/home}" class="navbar-brand"><i class="fas fa-graduation-cap"></i>Eazy School
       </a>
       <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
@@ -19,10 +19,10 @@
       <div class="collapse navbar-collapse" id="navbarScroll">
         <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page">Home</a>
+            <a th:href="@{/home}" class="nav-link active" aria-current="page">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">Courses</a>
+            <a th:href="@{/courses}" class="nav-link">Courses</a>
           </li>
           <li class="nav-item">
             <a class="nav-link">Contact</a>
