Create Contact page, and Submit information from contact page

--- a/src/main/resources/static/assets/css/style-starter.css
+++ b/src/main/resources/static/assets/css/style-starter.css
@@ -263,6 +263,9 @@ samp {
   ;
   unicode-bidi: bidi-override;
 }
+.submit-success, .submit-error {
+  display: none;
+}
 
 pre {
   display: block;
