--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -3,7 +3,7 @@ Author: W3layouts
 Author URL: http://w3layouts.com
 -->
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.com">
 
 <head>
     <!-- Required meta tags -->
