--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@ Author: W3layouts
 Author URL: http://w3layouts.com
 -->
 <!doctype html>
-<html lang="en" xmlns:th = "http://www.thymeleaf.com">
+<html lang="en" xmlns:th = "http://www.thymeleaf.org">
 
 <head>
     <!-- Required meta tags -->
@@ -18,8 +18,9 @@ Author URL: http://w3layouts.com
 
 <body>
 
-   <div th:replace="header :: header" ></div>
-    <!-- header -->
+<div th:replace="~{header :: header}">...</div>
+
+<!-- header -->
     <!-- //header -->
 
     <!-- banner section -->
