Building Holiday page of Web Application

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -50,20 +50,20 @@ Author URL: http://w3layouts.com
                         <div class="row">
                             <div class="col-sm-6">
                                 <input type="text" name="name" id="name" placeholder="Your Name"
-                                       class="contact-input" />
+                                       class="contact-input" required="" />
                             </div>
                             <div class="col-sm-6">
                                 <input type="text" name="mobileNum" id="mobileNum" placeholder="Your Mobile Number"
-                                       class="contact-input" />
+                                       class="contact-input" required="" />
                             </div>
                         </div>
                         <input type="text" name="email" id="email" placeholder="Your Email"
-                               class="contact-input" />
+                               class="contact-input" required="" />
                         <input type="text" name="subject" id="subject" placeholder="Subject"
-                               class="contact-input" />
+                               class="contact-input" required=""/>
                     </div>
                     <div class="form-input">
-                        <textarea name="message" id="message" placeholder="Type your message here"></textarea>
+                        <textarea name="message" id="message" placeholder="Type your message here" required=""></textarea>
                     </div>
                     <div class="text-start">
                         <button class="btn btn-style btn-style-3">Send Message</button>
