--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -28,7 +28,7 @@
                 <div class="col-lg-2 col-md-3 col-6 ps-lg-5 ps-lg-4 footer-list-29 mt-md-0 mt-4">
                     <ul>
                         <h6 class="footer-title-29">Explore</h6>
-                        <li><a th:href="@{/holiday}">Holidays</a></li>
+                        <li><a th:href="@{/holiday/all}">Holidays</a></li>
                         <li><a th:href="@{/contact}">Privacy policy</a></li>
                         <li><a th:href="@{/contact}">Contact Us</a></li>
                         <li><a th:href="@{/contact}">License & uses</a></li>
