--- a/src/main/resources/templates/holiday.html
+++ b/src/main/resources/templates/holiday.html
@@ -13,7 +13,7 @@ Author URL: http://w3layouts.com
   <!-- Google fonts -->
   <link href="//fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
   <!-- Template CSS Style link -->
-  <link rel="stylesheet" href="assets/css/style-starter.css">
+  <link rel="stylesheet" href="/assets/css/style-starter.css">
 </head>
 
 <body>
@@ -44,7 +44,7 @@ Author URL: http://w3layouts.com
       <h3 class="title-style">Awesome Holidays</h3>
     </div>
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-6" th:if="${festival} == true">
         <h5 class="sub-title-timeline"><i class="fas fa-snowman"></i> Festival Holidays</h5>
         <div class="timeline">
           <div class="timeline">
@@ -60,7 +60,7 @@ Author URL: http://w3layouts.com
         </div>
       </div>
 
-      <div class="col-lg-6 mt-lg-0 mt-4">
+      <div class="col-lg-6 mt-lg-0 mt-4" th:if="${federal} == true">
         <h5 class="sub-title-timeline"><i class="fas fa-flag-usa"></i> Federal Holidays </h5>
         <div class="timeline">
           <div th:each="holiday : ${FEDERAL}" class="column">
