--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -354,7 +354,7 @@ Author URL: http://w3layouts.com
     <!-- //call block -->
 
     <!-- footer block -->
-   <div th:replace="footer :: footer"> </div>
+   <div th:replace="~{footer :: footer}"> </div>
     <!-- //footer block -->
 
     <!-- Js scripts -->
