--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+
 <head>
-    <meta charset="UTF-8">
-    <!--<title>Title</title>-->
+
 </head>
+
 <body>
+<!-- header -->
 <header id="site-header" class="fixed-top">
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -18,14 +21,26 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarScroll">
         <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll">
-          <li class="nav-item">
-            <a th:href="@{/home}" class="nav-link active" aria-current="page">Home</a>
+          <li class="nav-item" sec:authorize="isAnonymous()">
+            <a th:href="@{/home}" class="nav-link" aria-current="page">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" sec:authorize="isAnonymous()">
             <a th:href="@{/courses}" class="nav-link">Courses</a>
           </li>
-          <li class="nav-item">
-            <a th:href="@{/contact}"class="nav-link">Contact</a>
+          <li class="nav-item" sec:authorize="isAnonymous()">
+            <a th:href="@{/contact}" class="nav-link">Contact</a>
+          </li>
+          <li class="nav-item" sec:authorize="isAnonymous()">
+            <a th:href="@{/login}" class="nav-link">LogIn</a>
+          </li>
+          <li class="nav-item" sec:authorize="isAuthenticated()">
+            <a th:href="@{/dashboard}" class="nav-link">Dashboard</a>
+          </li>
+          <li class="nav-item" sec:authorize="isAuthenticated()">
+            <a th:href="@{/logout}" class="nav-link">Logout</a>
+          <li class="nav-item" sec:authorize="isAuthenticated()">
+            <h5 th:text="${#authentication.name}"> </h5>
+          </li>
           </li>
         </ul>
       </div>
@@ -47,5 +62,7 @@
     </nav>
   </div>
 </header>
+<!-- //header -->
 </body>
+
 </html>
