--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -1,7 +1,3 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
@@ -19,46 +15,68 @@ Author URL: http://w3layouts.com
 
 <body>
 
+
 <!-- header -->
 <div th:replace="~{header :: header}">...</div>
+
 <!-- //header -->
 
 <!-- inner banner -->
 <section class="inner-banner py-5">
     <div class="w3l-breadcrumb py-lg-5">
         <div class="container pt-4 pb-sm-4">
-            <h4 class="inner-text-title pt-5">Oops...</h4>
+            <h4 class="inner-text-title pt-5">Contact Messages</h4>
             <ul class="breadcrumbs-custom-path">
                 <li><a th:href="@{/home}">Home</a></li>
-                <li class="active"><i class="fas fa-angle-right"></i>Error</li>
+                <li class="active"><i class="fas fa-angle-right"></i>Messages</li>
             </ul>
         </div>
     </div>
 </section>
+
 <!-- //inner banner -->
 
-<!-- error block -->
-<section class="page_404">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12 ">
-                <div class="col-sm-10 col-sm-offset-1  text-center">
-                    <div class="four_zero_four_bg">
-                        <h1 class="text-center">oops...</h1>
-                    </div>
-                    <div class="contant_box_404">
-                        <h3 class="h2">
-                            Look like you're lost
-                        </h3>
-                        <p th:text="${'Error Message - ' + errorMsg}"></p>
-                        <a th:href="@{/home}" class ="link_404 btn btn-style btn-style-3">Go to Home</a>
-                    </div>
-                </div>
+<div class="site-section">
+
+    <div class="table-responsive-md">
+        <div class="row mb-4">
+            <div class="col-md-7">
+                <h3 class="heading-21921">Open Contact Messages</h3>
             </div>
         </div>
+        <table class="table table-striped table-hover">
+            <thead class="table-dark">
+            <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Age</th>
+                <th scope="col">Salary</th>
+                <th scope="col">Mobile</th>
+                <th scope="col">Subject</th>
+                <th scope="col">Message</th>
+                <th scope="col"></th>
+            </tr>
+            </thead>
+            <tbody>
+
+                <tr th:each="msg: ${contact}">
+                    <td th:text="${msg.name}"></td>
+                    <td th:text="${msg.mobileNum}"></td>
+                    <td th:text="${msg.email}"></td>
+                    <td th:text="${msg.subject}"></td>
+                    <td th:text="${msg.message}"></td>
+                    <td><a th:href="@{/closeMsg(id=${msg.contactId})}" class="btn btn-style btn-style-3">CLOSE</a></td>
+                </tr>
+
+            </tr>
+            </tbody>
+        </table>
     </div>
-</section>
-<!-- //error block -->
+    <div class="col-md-2 login-center text-start">
+        <a th:href="@{/dashboard}">
+            <button class="btn btn-style btn-style-3 text-left">BACK</button>
+        </a>
+    </div>
+</div>
 
 <!-- footer block -->
 <div th:replace="~{footer :: footer}">...</div>
