--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -48,9 +48,8 @@
             <thead class="table-dark">
             <tr>
                 <th scope="col">Name</th>
-                <th scope="col">Age</th>
-                <th scope="col">Salary</th>
                 <th scope="col">Mobile</th>
+                <th scope="col">Email</th>
                 <th scope="col">Subject</th>
                 <th scope="col">Message</th>
                 <th scope="col"></th>
