Building Custom validation inside Spring MVC

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -56,7 +56,7 @@ Author URL: http://w3layouts.com
           </div>
           <div class="col-md-8 login-center text-start">
             <button class="btn btn-style btn-style-3 text-left">Log In</button>
-            <a class="new-user text-right" href="">New User ?</a>
+            <a class="new-user text-right" th:href="@{/public/register}">New User ?</a>
           </div>
         </form>
       </div>
