--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -54,7 +54,7 @@ Author URL: http://w3layouts.com
     <div class="container-fluid">
       <div class="row m-t-25">
         <div class="col-sm-6 col-lg-3">
-          <a th:href="@{/display}">
+          <a th:href="@{/displayProfile}">
             <div class="overview-item overview-item--c4">
               <div class="overview__inner">
                 <div class="overview-box clearfix">
