--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -85,10 +85,42 @@ Author URL: http://w3layouts.com
             </div>
           </a>
         </div>
+        <div class="col-sm-6 col-lg-3" sec:authorize="hasRole('ROLE_ADMIN')">
+          <a th:href="@{/admin/displayClasses}">
+            <div class="overview-item overview-item--c1">
+              <div class="overview__inner">
+                <div class="overview-box clearfix">
+                  <div class="icon">
+                    <i class="fas fa-envelope-open-text"></i>
+                  </div>
+                  <div class="text">
+                    <h2>Classes</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm-6 col-lg-3" sec:authorize="hasRole('ROLE_ADMIN')">
+          <a th:href="@{/admin/displayCourses}">
+            <div class="overview-item overview-item--c2">
+              <div class="overview__inner">
+                <div class="overview-box clearfix">
+                  <div class="icon">
+                    <i class="fas fa-envelope-open-text"></i>
+                  </div>
+                  <div class="text">
+                    <h2>Courses</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</div >
 
 <!-- footer block -->
 <div th:replace="~{footer :: footer}">...</div>
