Create 'Users' web page for admin

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -117,6 +117,22 @@ Author URL: http://w3layouts.com
             </div>
           </a>
         </div>
+        <div class="col-sm-6 col-lg-3" sec:authorize="hasRole('ROLE_ADMIN')">
+          <a th:href="@{/displayUsers}">
+            <div class="overview-item overview-item--c3">
+              <div class="overview__inner">
+                <div class="overview-box clearfix">
+                  <div class="icon">
+                    <i class="fa-solid fa-users"></i>
+                  </div>
+                  <div class="text">
+                    <h2>Users</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
   </div>
