Implement ManyToMany configurations inside Entity classes

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -60,8 +60,8 @@
         <td th:text="${use.personId}"></td>
         <td th:text="${use.name}"></td>
         <td th:text="${use.mobileNumber}"></td>
-        <td th:text="${use.email}"></td>
-        <!--<td><a th:href="@{/closeMsg(id=${msg.contactId})}" class="btn btn-style btn-style-3">CLOSE</a></td> -->
+        <td th:text="${use.email}">
+        <td><a  class="btn btn-style btn-style-3">CLOSE</a></td>
       </tr>
 
       </tr>
