--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -42,6 +42,8 @@ Author URL: http://w3layouts.com
     <div class="title-main text-center mx-auto mb-md-5 mb-4" style="max-width:500px;">
       <h3 class="title-style" th:text="${'Welcome - ' + username}"></h3>
       <p class="" th:text="${'You logged in as - ' + roles}"></p>
+      <p class=""th:if="@{!#strings.isEmpty(enrolledCLass)}"
+          th:text="${'You assigned class is  - [' + enrolledClass +']'}"></p>
     </div>
 
   </div>
@@ -127,6 +129,22 @@ Author URL: http://w3layouts.com
                   </div>
                   <div class="text">
                     <h2>Users</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm-6 col-lg-3" sec:authorize="hasRole('ROLE_STUDENT')">
+          <a th:href="@{/student/displayCourses}">
+            <div class="overview-item overview-item--c2">
+              <div class="overview__inner">
+                <div class="overview-box clearfix">
+                  <div class="icon">
+                    <i class="fas fa-envelope-open-text"></i>
+                  </div>
+                  <div class="text">
+                    <h2>Courses</h2>
                   </div>
                 </div>
               </div>
