--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -72,7 +72,7 @@ Author URL: http://w3layouts.com
           </a>
         </div>
         <div class="col-sm-6 col-lg-3" sec:authorize="hasRole('ROLE_ADMIN')">
-          <a th:href="@{/displayMessages}">
+          <a th:href="@{/displayMessages/page/1?sortField=name&sortDir=desc}">
             <div class="overview-item overview-item--c3">
               <div class="overview__inner">
                 <div class="overview-box clearfix">
