--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -37,10 +37,12 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-8 footer-list-29 mt-lg-0 mt-4 ps-lg-5">
                     <h6 class="footer-title-29">Subscribe</h6>
-                    <form action="#" class="subscribe d-flex" method="post">
-                        <input type="email" name="email" placeholder="Email Address" required="">
-                        <button class="button-style"><span class="fa fa-paper-plane"
-                                                           aria-hidden="true"></span></button>
+                    <form action="/sendMessages" class="subscribe d-flex" method="post" >
+
+                        <input type="email" name="mail" id="mail" placeholder="Email Address" required="" >
+
+                        <button class="button-style"><span  class="fa fa-paper-plane"
+                                                            aria-hidden="true"></span></button>
                     </form>
                     <p class="mt-3">Subscribe to our mailing list and get updates to your email inbox.</p>
                 </div>
